--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "next-contentlayer": "^0.2.8",
     "next-seo": "^5.8.0",
     "nprogress": "^0.2.0",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
